--- a/src/components/LabeledInput/LabeledInput.scss
+++ b/src/components/LabeledInput/LabeledInput.scss
@@ -6,6 +6,7 @@
   font-weight: 700;
 
   input {
+    width: 100%;
     font-weight: inherit;
     border: 2px solid rgba(0, 0, 0, 0);
     box-shadow: 0 0 0 1px $primary-color;
