--- a/src/globals.scss
+++ b/src/globals.scss
@@ -10,15 +10,12 @@ $primary-color: rgb(46, 145, 158);
 
 @mixin cv-card {
   @media only screen and (max-width: 830px) {
-    margin: 5% 0;
-    height: 80vh;
-    max-width: 80vw;
+    min-height: 80vh;
+    width: 80vw;
   }
 
-  aspect-ratio: 1 / 1.4142;
-
-  max-width: 40vw;
-  height: 90%;
+  width: clamp(20vw, 35vw, 40vw);
+  min-height: 100%;
 }
 
 @mixin editor-item-grid {
